frontend/src/lib/craps/parser.js
const crapsParser = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = function(line, tail) { return [line].concat(tail); },
        peg$c1 = function(line) { return [line]; },
        peg$c2 = function() { return [] },
        peg$c3 = function(directive) { return { lineno: location().start.line, label: null, directive: directive, instruction: null, synthetic: null }; },
        peg$c4 = ":",
        peg$c5 = peg$literalExpectation(":", false),
        peg$c6 = function(label, directive) { return { lineno: location().start.line, label: label, directive: directive, instruction: null, synthetic: null }; },
        peg$c7 = function(label, instruction) { return { lineno: location().start.line, label: label, directive: null, instruction: instruction, synthetic: null }; },
        peg$c8 = function(instruction) { return { lineno: location().start.line, label: null, directive: null, instruction: instruction, synthetic: null }; },
        peg$c9 = function(label, synthetic) { return { lineno: location().start.line, label: label, directive: null, instruction: null, synthetic: synthetic }; },
        peg$c10 = function(synthetic) { return { lineno: location().start.line, label: null, directive: null, instruction: null, synthetic: synthetic }; },
        peg$c11 = function(label) { return { lineno: location().start.line, label: label, directive: null, instruction: null, synthetic: null }; },
        peg$c12 = ".org",
        peg$c13 = peg$literalExpectation(".org", false),
        peg$c14 = function(address) { return { type: 'directive', code: 'org', address: address }; },
        peg$c15 = ".word",
        peg$c16 = peg$literalExpectation(".word", false),
        peg$c17 = ",",
        peg$c18 = peg$literalExpectation(",", false),
        peg$c19 = function(head, tail) { return { type: 'directive', code: 'word',
                values: [head].concat(tail.map(function(elt) { return elt[3] })) }; },
        peg$c20 = "=",
        peg$c21 = peg$literalExpectation("=", false),
        peg$c22 = function(label, value) { return { type: 'directive', code: 'equ', label: label, value: value }; },
        peg$c23 = function(instructionArithLog1a) { return instructionArithLog1a; },
        peg$c24 = function(instructionArithLog1b) { return instructionArithLog1b; },
        peg$c25 = function(instructionLoad1a) { return instructionLoad1a; },
        peg$c26 = function(instructionLoad1b) { return instructionLoad1b; },
        peg$c27 = function(instructionStore1a) { return instructionStore1a; },
        peg$c28 = function(instructionStore1b) { return instructionStore1b; },
        peg$c29 = function(instructionSethi) { return instructionSethi; },
        peg$c30 = function(instructionBcc) { return instructionBcc; },
        peg$c31 = "reti",
        peg$c32 = peg$literalExpectation("reti", false),
        peg$c33 = function() { return { type: 'instructionReti', text: text() }; },
        peg$c34 = function(codeop, rs1, rs2, rd) { return { type: 'instructionArithLog1a', codeop: codeop, rs1: rs1, rs2: rs2, rd: rd, text: text() }; },
        peg$c35 = function(codeop, rs1, simm13, rd) { return { type: 'instructionArithLog1b', codeop: codeop, rs1: rs1, simm13: simm13, rd: rd, text: text() }; },
        peg$c36 = "addcc",
        peg$c37 = peg$literalExpectation("addcc", false),
        peg$c38 = "add",
        peg$c39 = peg$literalExpectation("add", false),
        peg$c40 = "subcc",
        peg$c41 = peg$literalExpectation("subcc", false),
        peg$c42 = "sub",
        peg$c43 = peg$literalExpectation("sub", false),
        peg$c44 = "andcc",
        peg$c45 = peg$literalExpectation("andcc", false),
        peg$c46 = "and",
        peg$c47 = peg$literalExpectation("and", false),
        peg$c48 = "orcc",
        peg$c49 = peg$literalExpectation("orcc", false),
        peg$c50 = "or",
        peg$c51 = peg$literalExpectation("or", false),
        peg$c52 = "xorcc",
        peg$c53 = peg$literalExpectation("xorcc", false),
        peg$c54 = "xor",
        peg$c55 = peg$literalExpectation("xor", false),
        peg$c56 = "umulcc",
        peg$c57 = peg$literalExpectation("umulcc", false),
        peg$c58 = "slr",
        peg$c59 = peg$literalExpectation("slr", false),
        peg$c60 = "sll",
        peg$c61 = peg$literalExpectation("sll", false),
        peg$c62 = function(codeop) { return codeop; },
        peg$c63 = "ld",
        peg$c64 = peg$literalExpectation("ld", false),
        peg$c65 = "[",
        peg$c66 = peg$literalExpectation("[", false),
        peg$c67 = "+",
        peg$c68 = peg$literalExpectation("+", false),
        peg$c69 = "]",
        peg$c70 = peg$literalExpectation("]", false),
        peg$c71 = function(rs1, rs2, rd) { return { type: 'instructionLoad1a', rs1: rs1, rs2: rs2, rd: rd, text: text() }; },
        peg$c72 = function(rs1, rd) { return { type: 'instructionLoad1a', rs1: rs1, rs2: 0, rd: rd, text: text() }; },
        peg$c73 = "-",
        peg$c74 = peg$literalExpectation("-", false),
        peg$c75 = function(rs1, plusMinus, simm13, rd) { return { type: 'instructionLoad1b', rs1: rs1, plusMinus: plusMinus, simm13: simm13, rd: rd, text: text() }; },
        peg$c76 = "st",
        peg$c77 = peg$literalExpectation("st", false),
        peg$c78 = function(rd, rs1, rs2) { return { type: 'instructionStore1a', rs1: rs1, rs2: rs2, rd: rd, text: text() }; },
        peg$c79 = function(rd, rs1) { return { type: 'instructionStore1a', rs1: rs1, rs2: 0, rd: rd, text: text() }; },
        peg$c80 = function(rd, rs1, plusMinus, simm13) { return { type: 'instructionStore1b', rs1: rs1, plusMinus: plusMinus, simm13: simm13, rd: rd, text: text() }; },
        peg$c81 = "sethi",
        peg$c82 = peg$literalExpectation("sethi", false),
        peg$c83 = function(imm24, rd) { return { type: 'instructionSethi', imm24: imm24, rd: rd, text: text() }; },
        peg$c84 = "b",
        peg$c85 = peg$literalExpectation("b", false),
        peg$c86 = function(cond, label) { return { type: 'instructionBcc', cond: cond, label: label, text: text() }; },
        peg$c87 = "leu",
        peg$c88 = peg$literalExpectation("leu", false),
        peg$c89 = "le",
        peg$c90 = peg$literalExpectation("le", false),
        peg$c91 = "lu",
        peg$c92 = peg$literalExpectation("lu", false),
        peg$c93 = "lt",
        peg$c94 = peg$literalExpectation("lt", false),
        peg$c95 = "l",
        peg$c96 = peg$literalExpectation("l", false),
        peg$c97 = "neg",
        peg$c98 = peg$literalExpectation("neg", false),
        peg$c99 = "ne",
        peg$c100 = peg$literalExpectation("ne", false),
        peg$c101 = "nz",
        peg$c102 = peg$literalExpectation("nz", false),
        peg$c103 = "nn",
        peg$c104 = peg$literalExpectation("nn", false),
        peg$c105 = "n",
        peg$c106 = peg$literalExpectation("n", false),
        peg$c107 = "geu",
        peg$c108 = peg$literalExpectation("geu", false),
        peg$c109 = "ge",
        peg$c110 = peg$literalExpectation("ge", false),
        peg$c111 = "gt",
        peg$c112 = peg$literalExpectation("gt", false),
        peg$c113 = "gu",
        peg$c114 = peg$literalExpectation("gu", false),
        peg$c115 = "g",
        peg$c116 = peg$literalExpectation("g", false),
        peg$c117 = "a",
        peg$c118 = peg$literalExpectation("a", false),
        peg$c119 = "z",
        peg$c120 = peg$literalExpectation("z", false),
        peg$c121 = "pos",
        peg$c122 = peg$literalExpectation("pos", false),
        peg$c123 = "cs",
        peg$c124 = peg$literalExpectation("cs", false),
        peg$c125 = "cc",
        peg$c126 = peg$literalExpectation("cc", false),
        peg$c127 = "vs",
        peg$c128 = peg$literalExpectation("vs", false),
        peg$c129 = "vc",
        peg$c130 = peg$literalExpectation("vc", false),
        peg$c131 = "eq",
        peg$c132 = peg$literalExpectation("eq", false),
        peg$c133 = "e",
        peg$c134 = peg$literalExpectation("e", false),
        peg$c135 = function(cond) { return cond; },
        peg$c136 = "clr",
        peg$c137 = peg$literalExpectation("clr", false),
        peg$c138 = function(rd) { return { type: 'clr', rd: rd, text: text() }; },
        peg$c139 = "mov",
        peg$c140 = peg$literalExpectation("mov", false),
        peg$c141 = function(rs, rd) { return { type: 'mov', rs: rs, rd: rd, text: text() }; },
        peg$c142 = "inccc",
        peg$c143 = peg$literalExpectation("inccc", false),
        peg$c144 = function(rd) { return { type: 'inccc', rd: rd, text: text() }; },
        peg$c145 = "inc",
        peg$c146 = peg$literalExpectation("inc", false),
        peg$c147 = function(rd) { return { type: 'inc', rd: rd, text: text() }; },
        peg$c148 = "deccc",
        peg$c149 = peg$literalExpectation("deccc", false),
        peg$c150 = function(rd) { return { type: 'deccc', rd: rd, text: text() }; },
        peg$c151 = "dec",
        peg$c152 = peg$literalExpectation("dec", false),
        peg$c153 = function(rd) { return { type: 'dec', rd: rd, text: text() }; },
        peg$c154 = "setq",
        peg$c155 = peg$literalExpectation("setq", false),
        peg$c156 = function(simm13, rd) { return { type: 'setq', simm13: simm13, rd: rd, text: text() }; },
        peg$c157 = "set",
        peg$c158 = peg$literalExpectation("set", false),
        peg$c159 = function(simm32, rd) { return { type: 'set', simm32: simm32, rd: rd, text: text() }; },
        peg$c160 = "cmp",
        peg$c161 = peg$literalExpectation("cmp", false),
        peg$c162 = function(rs, rd) { return { type: 'cmp', rs: rs, rd: rd, text: text() }; },
        peg$c163 = function(rs, simm13) { return { type: 'cmp', rs: rs, simm13: simm13, text: text() }; },
        peg$c164 = "tst",
        peg$c165 = peg$literalExpectation("tst", false),
        peg$c166 = function(rs) { return { type: 'tst', rs: rs, text: text() }; },
        peg$c167 = "negcc",
        peg$c168 = peg$literalExpectation("negcc", false),
        peg$c169 = function(rd) { return { type: 'negcc', rd: rd, text: text() }; },
        peg$c170 = "nop",
        peg$c171 = peg$literalExpectation("nop", false),
        peg$c172 = function() { return { type: 'nop', text: text() }; },
        peg$c173 = "call",
        peg$c174 = peg$literalExpectation("call", false),
        peg$c175 = function(label) { return { type: 'call', label: label, text: text() }; },
        peg$c176 = "ret",
        peg$c177 = peg$literalExpectation("ret", false),
        peg$c178 = function() { return { type: 'ret', text: text() }; },
        peg$c179 = "push",
        peg$c180 = peg$literalExpectation("push", false),
        peg$c181 = function(rs) { return { type: 'push', rs: rs, text: text() }; },
        peg$c182 = "pop",
        peg$c183 = peg$literalExpectation("pop", false),
        peg$c184 = function(rd) { return { type: 'pop', rd: rd, text: text() }; },
        peg$c185 = "%r",
        peg$c186 = peg$literalExpectation("%r", false),
        peg$c187 = function(regnum) { return regnum; },
        peg$c188 = "%fp",
        peg$c189 = peg$literalExpectation("%fp", false),
        peg$c190 = function() { return 27; },
        peg$c191 = "%sp",
        peg$c192 = peg$literalExpectation("%sp", false),
        peg$c193 = function() { return 29; },
        peg$c194 = "%pc",
        peg$c195 = peg$literalExpectation("%pc", false),
        peg$c196 = function() { return 30; },
        peg$c197 = "%ir",
        peg$c198 = peg$literalExpectation("%ir", false),
        peg$c199 = function() { return 31; },
        peg$c200 = function(head, tail) {
              return tail.reduce(function(result, element) {
                return { 'op': element[1], arg1: result, arg2: element[3] };
              }, head);
            },
        peg$c201 = "*",
        peg$c202 = peg$literalExpectation("*", false),
        peg$c203 = "/",
        peg$c204 = peg$literalExpectation("/", false),
        peg$c205 = "(",
        peg$c206 = peg$literalExpectation("(", false),
        peg$c207 = ")",
        peg$c208 = peg$literalExpectation(")", false),
        peg$c209 = function(expr) { return expr; },
        peg$c210 = function(val) { return val; },
        peg$c211 = function(val) { return -val; },
        peg$c212 = "0b",
        peg$c213 = peg$literalExpectation("0b", false),
        peg$c214 = /^[0-1]/,
        peg$c215 = peg$classExpectation([["0", "1"]], false, false),
        peg$c216 = function() { return parseInt(text().substring(2), 2); },
        peg$c217 = "0x",
        peg$c218 = peg$literalExpectation("0x", false),
        peg$c219 = /^[0-9a-fA-F]/,
        peg$c220 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false),
        peg$c221 = function() { return parseInt(text().substring(2), 16); },
        peg$c222 = /^[0-9]/,
        peg$c223 = peg$classExpectation([["0", "9"]], false, false),
        peg$c224 = function() { return parseInt(text(), 10); },
        peg$c225 = /^[a-zA-Z0-9_]/,
        peg$c226 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false),
        peg$c227 = function(chars) { return chars.join(""); },
        peg$c228 = function() { return []; },
        peg$c229 = peg$otherExpectation("whitespace"),
        peg$c230 = /^[\t\x0B\f \xA0\uFEFF]/,
        peg$c231 = peg$classExpectation(["\t", "\x0B", "\f", " ", "\xA0", "\uFEFF"], false, false),
        peg$c232 = /^[\n\r]/,
        peg$c233 = peg$classExpectation(["\n", "\r"], false, false),
        peg$c234 = "/*",
        peg$c235 = peg$literalExpectation("/*", false),
        peg$c236 = "*/",
        peg$c237 = peg$literalExpectation("*/", false),
        peg$c238 = "//",
        peg$c239 = peg$literalExpectation("//", false),
        peg$c240 = peg$anyExpectation(),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parseLines();

      return s0;
    }

    function peg$parseLines() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseLine();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseLines();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c0(s2, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parse_();
        if (s1 !== peg$FAILED) {
          s2 = peg$parseLine();
          if (s2 !== peg$FAILED) {
            s3 = peg$parse_();
            if (s3 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c1(s2);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parse_();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c2();
          }
          s0 = s1;
        }
      }

      return s0;
    }

    function peg$parseLine() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseDirective();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseLabel();
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 58) {
              s3 = peg$c4;
              peg$currPos++;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c5); }
            }
            if (s3 !== peg$FAILED) {
              s4 = peg$parse_();
              if (s4 !== peg$FAILED) {
                s5 = peg$parseDirective();
                if (s5 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c6(s1, s5);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseLabel();
          if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            if (s2 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 58) {
                s3 = peg$c4;
                peg$currPos++;
              } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c5); }
              }
              if (s3 !== peg$FAILED) {
                s4 = peg$parse_();
                if (s4 !== peg$FAILED) {
                  s5 = peg$parseInstruction();
                  if (s5 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c7(s1, s5);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseInstruction();
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c8(s1);
            }
            s0 = s1;
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parseLabel();
              if (s1 !== peg$FAILED) {
                s2 = peg$parse_();
                if (s2 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 58) {
                    s3 = peg$c4;
                    peg$currPos++;
                  } else {
                    s3 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c5); }
                  }
                  if (s3 !== peg$FAILED) {
                    s4 = peg$parse_();
